[gd_scene load_steps=3 format=3 uid="uid://csvqx0c2070ud"]

[ext_resource type="Texture2D" uid="uid://dflojhmthj1ps" path="res://circback.PNG" id="1_gmcgk"]
[ext_resource type="Script" path="res://drag_drop_eq.gd" id="1_iffmm"]

[node name="DragDropEq" type="Node2D"]
script = ExtResource("1_iffmm")

[node name="background" type="ColorRect" parent="."]
offset_right = 1850.0
offset_bottom = 906.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="background"]
position = Vector2(960, 540)
scale = Vector2(1.03784, 1.19205)
texture = ExtResource("1_gmcgk")

[node name="ImagePathText" type="LineEdit" parent="."]
offset_left = 684.0
offset_top = 178.0
offset_right = 1256.0
offset_bottom = 225.0
placeholder_text = "Enter circuit image (PNG) URL here, then click submit to continue"

[node name="ImageSubmit" type="Button" parent="."]
offset_left = 908.0
offset_top = 275.0
offset_right = 1035.0
offset_bottom = 319.0
text = "Submit"

[node name="QuestionText" type="LineEdit" parent="."]
offset_left = 242.0
offset_top = 27.0
offset_right = 1680.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Enter question text here, then click submit to continue"
alignment = 1
expand_to_text_length = true

[node name="QuestionTextSubmit" type="Button" parent="."]
offset_left = 906.0
offset_top = 186.0
offset_right = 1033.0
offset_bottom = 230.0
text = "Submit"

[node name="EquationSubmit" type="Button" parent="."]
offset_left = 908.0
offset_top = 197.0
offset_right = 1035.0
offset_bottom = 241.0
text = "Submit"

[node name="Equation" type="LineEdit" parent="."]
offset_left = 639.0
offset_top = 148.0
offset_right = 1323.0
offset_bottom = 183.0
placeholder_text = "Re-enter the equations, marking desired \"answer blanks\" with _"

[node name="Answer" type="LineEdit" parent="."]
offset_left = 640.0
offset_top = 112.0
offset_right = 1324.0
offset_bottom = 147.0
placeholder_text = "Enter the all complete equations, comma separated"

[node name="CircuitImage" type="TextureRect" parent="."]
offset_left = 1.0
offset_top = 256.0
offset_right = 1801.0
offset_bottom = 1056.0
expand_mode = 3

[connection signal="text_changed" from="ImagePathText" to="." method="_on_image_path_text_text_changed"]
[connection signal="pressed" from="ImageSubmit" to="." method="_on_image_submit_pressed"]
[connection signal="text_changed" from="QuestionText" to="." method="_on_question_text_text_changed"]
[connection signal="pressed" from="QuestionTextSubmit" to="." method="_on_question_text_submit_pressed"]
[connection signal="pressed" from="EquationSubmit" to="." method="_on_equation_submit_pressed"]
[connection signal="text_changed" from="Equation" to="." method="_on_equation_text_changed"]
[connection signal="text_changed" from="Answer" to="." method="_on_answer_text_changed"]
